New vertex and pixel shader with all of the lights combined, still needs some work.

--- a/Lab9/Lab9/Lab9.vcxproj.filters
+++ b/Lab9/Lab9/Lab9.vcxproj.filters
@@ -76,5 +76,7 @@
     <FxCompile Include="Sky_PS.hlsl">
       <Filter>Header Files</Filter>
     </FxCompile>
+    <FxCompile Include="Combined_VS.hlsl" />
+    <FxCompile Include="Combined_PS.hlsl" />
   </ItemGroup>
 </Project>
