--- a/Lab9/Lab9/Lab9.vcxproj.filters
+++ b/Lab9/Lab9/Lab9.vcxproj.filters
@@ -66,17 +66,10 @@
   <ItemGroup>
     <FxCompile Include="Trivial_VS.hlsl" />
     <FxCompile Include="Trivial_PS.hlsl" />
-    <FxCompile Include="Textured_VS.hlsl" />
-    <FxCompile Include="Textured_PS.hlsl" />
-    <FxCompile Include="Lit_VS.hlsl" />
-    <FxCompile Include="Lit_PS.hlsl" />
-    <FxCompile Include="Sky_VS.hlsl">
-      <Filter>Header Files</Filter>
-    </FxCompile>
-    <FxCompile Include="Sky_PS.hlsl">
-      <Filter>Header Files</Filter>
-    </FxCompile>
     <FxCompile Include="Combined_VS.hlsl" />
     <FxCompile Include="Combined_PS.hlsl" />
+    <FxCompile Include="Sky_VS.hlsl" />
+    <FxCompile Include="Sky_PS.hlsl" />
+    <FxCompile Include="View_GS.hlsl" />
   </ItemGroup>
 </Project>
